@@ -5,8 +5,6 @@ session_decode(); should not segfault
 --INI--
 session.use_cookies=0
 session.cache_limiter=
-session.bug_compat_42=1
-session.bug_compat_warn=0
 --FILE--
 <?php
 error_reporting(E_ALL);
